--- a/src/components/CalenderHeader/CalendarHeader.css
+++ b/src/components/CalenderHeader/CalendarHeader.css
@@ -68,3 +68,15 @@
   width: 1.25rem;
   height: 1.25rem;
 }
+.btn-logout{
+  background-color: #ef4444; 
+  color: white;             
+  padding: 0.25rem 0.75rem;  
+  border-radius: 0.375rem;   
+  transition: background-color 0.2s ease;
+  cursor: pointer;
+
+}
+.btn-logout:hover {
+  background-color: #dc2626; 
+}
